# calixareneSAMSegmentation

./: .gitignore  README.md  cellpose_diameter_optimization.ipynb  pyproject.toml
images_descriptors_from_masks/: 1_getting_raw_data.ipynb  2_descriptors_getting.ipynb  3_data_preprocessing.ipynb  image_features.csv  molecule_image_features.csv  per_object.csv
